[tool.poetry]
name = "simple-proxy"
version = "0.1.0"
description = ""
authors = ["az <azzipstar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
proxy-py = "^2.4.10"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
